<resources>
    <string name="app_name">SubBook</string>
    <string name="action_settings">Settings</string>
    <string name="edit_sub_name">Subscription name</string>
    <string name="edit_sub_price">Price</string>
    <string name="edit_sub_date">Date</string>
    <string name="edit_sub_submit">Add</string>
    <string name="edit_sub_comment">Comment</string>
    <string name="edit_sub_date_fmt">%1$d/%2$d/%3$d</string>
    <string name="edit_sub_error">Error: Please fill %1$s.</string>
    <string name="edit_sub_error_str_long">Error: %1$s too long</string>
    <string name="no_comment">No comment added.</string>
    <string name="sub_list_fmt">%1$s   Name: <b>%2$s</b>   Price: <b>%3$f.2</b></string>
</resources>
